added user address

--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -1067,7 +1067,7 @@ video {
   line-height: 1.75rem;
 }
 
-.text-sm{
+.text-sm font-normal{
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
@@ -1348,47 +1348,47 @@ video {
             <li class="mb-1 group">
                 <a href="/admin/dashboard" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                     <i class="ri-home-2-line mr-3 text-lg"></i>
-                    <span class="text-sm">Dashboard</span>
+                    <span class="text-sm font-normal">Dashboard</span>
                 </a>
             </li>
             <li class="mb-1 group">
                 <a href="./userManagement" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
-                    <span class="text-sm">Users</span>
+                    <span class="text-sm font-normal">Users</span>
                 </a>
             </li>
     
             <li class="mb-1 group">
                 <a href="./product-list" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
-                    <span class="text-sm">Products</span>
+                    <span class="text-sm font-normal">Products</span>
                 </a>
             </li>
     
             <li class="mb-1 group">
                 <a href="./category-list" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
-                    <span class="text-sm">Categories</span>
+                    <span class="text-sm font-normal">Categories</span>
                 </a>
             </li>
     
             <li class="mb-1 group">
                 <a href="#" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
-                    <span class="text-sm">Orders</span>
+                    <span class="text-sm font-normal">Orders</span>
                 </a>
             </li>
     
             <li class="mb-1 group">
                 <a href="#" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
-                    <span class="text-sm">Coupons</span>
+                    <span class="text-sm font-normal">Coupons</span>
                 </a>
             </li>
             <li class="mb-1 group">
                 <a href="./admin-logout" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                
-                    <span class="text-sm">Logout</span>
+                    <span class="text-sm font-normal">Logout</span>
                 </a>
             </li>
         </ul>
@@ -1411,7 +1411,7 @@ video {
                     <div class="dropdown-menu shadow-md shadow-black/5 z-30 hidden max-w-xs w-full bg-white rounded-md border border-gray-100">
                         <form action="" class="p-4 border-b border-b-gray-100">
                             <div class="relative w-full">
-                                <input type="text" class="py-2 pr-4 pl-10 bg-gray-50 w-full outline-none border border-gray-100 rounded-md text-sm focus:border-blue-500" placeholder="Search...">
+                                <input type="text" class="py-2 pr-4 pl-10 bg-gray-50 w-full outline-none border border-gray-100 rounded-md text-sm font-normal focus:border-blue-500" placeholder="Search...">
                                 <i class="ri-search-line absolute top-1/2 left-4 -translate-y-1/2 text-gray-900"></i>
                             </div>
                         </form>
@@ -1478,7 +1478,7 @@ video {
                             </div>
                         </div>
                         <div class="p-2 md:block text-left">
-                            <h2 class="text-sm font-semibold text-gray-800">Admin</h2>
+                            <h2 class="text-sm font-normal font-semibold text-gray-800">Admin</h2>
                             <p class="text-xs text-gray-500">Administrator</p>
                         </div>                
                     </button>
