--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,6 +28,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
 </style>
 </head>
+<script src="/public/countries.js"></script>
 <body>
 
 <header class="justify-between bg-slate-200">
@@ -38,19 +39,11 @@
           <button type="button" class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-pink-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false">
             <span class="absolute -inset-0.5"></span>
             <span class="sr-only">Open main menu</span>
-            <!--
-              Icon when menu is closed.
-  
-              Menu open: "hidden", Menu closed: "block"
-            -->
+
             <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
             </svg>
-            <!--
-              Icon when menu is open.
-  
-              Menu open: "block", Menu closed: "hidden"
-            -->
+
             <svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
             </svg>
@@ -58,20 +51,51 @@
         </div>
         <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
           <div class="flex flex-shrink-0 items-center">
-            <a href="/home" class="michroma-regular">OneCart</a>
+            <a href="/home" class="michroma-regular hover:text-gray-500">OneCart</a>
           </div>
-
         </div>
+
+        <!-- Search bar -->
         <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
             <div class="hidden sm:ml-6 sm:block">
                 <div class="flex space-x-4">
-                  <!-- Current: "bg-gray-900 text-white", Default: "text-gray-950 hover:bg-gray-700 hover:text-white" -->
-                  <input class="rounded-full h-7 my-6 border-2 border-gray-300" type="text">
-                  <a href="/search" class="text-gray-500 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5 sono-regular">Search</a>
-                  <a href="/wishlist" class="text-gray-500 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5 sono-regular">Wishlist</a>
-                  <a href="/cart" class="text-gray-500 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5 sono-regular">Cart</a>
-                  <a href="/userProfile" class="text-gray-500 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5 sono-regular">User</a>
-                  <a href="/logout" class="text-gray-500 hover:text-cyan-500 px-3 py-2 text-sm font-medium my-5 sono-regular">Logout</a>
+        <!-- serach background-color -->
+        <div class="relative flex"
+        data-twe-input-wrapper-init
+        data-twe-input-group-ref>
+        <input
+          type="search"
+          class="peer mt-5 block min-h-[auto] w-96 h-7  border border-gray-950 bg-transparent px-3 py-[0.32rem] leading-[1.6] outline-none transition-all duration-200 ease-linear focus:placeholder:opacity-100 peer-focus:text-primary data-[twe-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-gray-950 dark:placeholder:text-gray-900 dark:autofill:shadow-autofill dark:peer-focus:text-primary [&:not([data-twe-input-placeholder-active])]:placeholder:opacity-0"
+          placeholder="Search"
+          aria-label="Search"
+          id="exampleFormControlInput"
+          aria-describedby="basic-addon1" />
+
+        <button
+          class="my-5 mr-12 ml-2 w-16 h-7  border border-gray-950 relative z-[2] -ms-0.5 flex items-center  bg-gray-950 px-5  text-xs font-medium uppercase leading-normal text-white shadow-primary-3 transition duration-150 ease-in-out hover:bg-primary-accent-300 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0 active:bg-primary-600 active:shadow-primary-2 dark:shadow-black/30 dark:hover:shadow-dark-strong dark:focus:shadow-dark-strong dark:active:shadow-dark-strong"
+          type="button"
+          id="button-addon1"
+          data-twe-ripple-init
+          data-twe-ripple-color="light">
+          <span class="[&>svg]:h-3 [&>svg]:w-3">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor">
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+            </svg>
+          </span>
+        </button>
+      </div>
+                  <a href="/wishlist" class="text-gray-800 hover:text-cyan-300 line px-3 py-2 text-sm my-5 font-sans">Wishlist</a>
+                  <a href="/cart" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-sm my-5 font-sans">Cart</a>
+                  <a href="/userProfile" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-sm my-5 font-sans">User</a>
+                  <a href="/logout" class="text-gray-800 hover:text-cyan-300 px-3 py-2 text-sm my-5 font-sans">Logout</a>
                 </div>
               </div>
           <!-- Profile dropdown -->
@@ -102,7 +126,7 @@
           </div>
         </div>
       </div>
-    </div>
+    
   
     <!-- Mobile menu, show/hide based on menu state. -->
     <div class="sm:hidden" id="mobile-menu">
@@ -110,10 +134,10 @@
         <!-- Current: "bg-gray-900 text-white", Default: "text-gray-950 hover:bg-gray-700 hover:text-white" -->
         <input class="rounded-full h-7 my-6 border-2 border-gray-300" type="text">
         <a href="#" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">Search</a>
-        <a href="#" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">Wishlist</a>
+        <a href="/wishlist" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">Wishlist</a>
         <a href="/cart" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">Cart</a>
         <a href="#" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">User</a>
-        <a href="#" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">Logout</a>
+        <a href="/logout" class="text-gray-950 hover:text-cyan-500 block rounded-md px-3 py-2 text-base font-medium">Logout</a>
       </div>
     </div>
 </header>
