--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -2,9 +2,10 @@
 <%- include('../partials/header') %>
 
 <section class="h-14 text-center mt-7 p-4">
-    <span class="michroma-regular">SEARCH</span>
+    <span class="michroma-regular text-2xl ">YOUR CART</span>
+    <p class="mt-5  border-b border-gray-950"></p>
 </section>
-<section class="mt-5">
+<section class="mt-16">
     <div class="bg-white flex">
         <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-1 lg:max-w-7xl lg:px-8">
             <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
